[gd_scene load_steps=6 format=3 uid="uid://cbn3887exbg6c"]

[ext_resource type="Script" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Map/Coin/coin.gd" id="1_ei0fj"]
[ext_resource type="Texture2D" uid="uid://cs6o7tgbikv0s" path="res://addons/Cubiix_Assets/Mods/TTSAsset/Assets/Objects/Map/Coin/Cubiix_Coin.png" id="1_vqef6"]

[sub_resource type="BoxShape3D" id="BoxShape3D_unael"]

[sub_resource type="Gradient" id="Gradient_prvt1"]
offsets = PackedFloat32Array(0, 0.246753, 0.603896)
colors = PackedColorArray(0, 0, 0, 1, 0, 0, 0, 0.747899, 0, 0, 0, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_d7l3a"]
gradient = SubResource("Gradient_prvt1")
width = 128
height = 128
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(1, 1)

[node name="Coin" type="Node3D"]
script = ExtResource("1_ei0fj")

[node name="CoinSprite" type="Node3D" parent="."]
transform = Transform3D(0.0731696, 0, 0.997319, 0, 1, 0, -0.997319, 0, 0.0731696, 0, 0, 0)

[node name="Sprite3D" type="Sprite3D" parent="CoinSprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.03)
pixel_size = 0.05
shaded = true
texture_filter = 0
render_priority = 100
texture = ExtResource("1_vqef6")

[node name="Sprite3D2" type="Sprite3D" parent="CoinSprite"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.03)
pixel_size = 0.05
shaded = true
texture_filter = 0
render_priority = 100
texture = ExtResource("1_vqef6")

[node name="CollectionDetection" type="Area3D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollectionDetection"]
shape = SubResource("BoxShape3D_unael")

[node name="RayCast3D" type="RayCast3D" parent="."]
unique_name_in_owner = true
target_position = Vector3(0, -10, 0)

[node name="Shadow" type="Sprite3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0)
render_priority = 100
texture = SubResource("GradientTexture2D_d7l3a")

[connection signal="body_entered" from="CollectionDetection" to="." method="_on_collection_detection_body_entered"]
